--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
+    "autoprefixer": "^10.4.13",
     "framer-motion": "^10.0.1",
+    "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0"
