--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.4"
   },
   "devDependencies": {
     "@types/node": "^18.14.6",
